--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "http-proxy-middleware": "^1.0.5",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
+    "superagent": "^6.0.0",
     "superagent-proxy": "^2.0.0",
     "uuid": "^8.3.0"
   }
