--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.5",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "superagent": "^6.0.0",
     "superagent-proxy": "^2.0.0",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.0",
+    "visual-platform": "^1.0.3"
   }
 }
